# cfmail

./: CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  cross-build.sh
.cargo/: config.toml
.github/workflows/: release.yml
docs/: RELEASE.md
locales/: en-US.json  zh-CN.json
src/: main.rs
src/api/cloudflare/: client.rs  mod.rs  models.rs
src/config/: mod.rs
src/service/: email.rs  mail_monitor.rs  mod.rs
src/ui/: mod.rs
src/util/: i18n.rs  mod.rs
wix/: main.wxs
